--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -45,6 +45,11 @@ config FB_MSM_MDSS_MDP3
 	The MDP3 provides support for an older version display controller
 	included in latest display sub-system, known as MDSS.
 
+config LCD_NOTIFY
+	bool "LCD notify kernel module"
+	---help---
+	Allows LCD on/off event notification to be sent throughout the kernel
+	
 config FB_MSM_MDSS_SUB_AREA_TABLE_51
 	bool "MDSS white tuning table"
 	default n
@@ -55,3 +60,4 @@ config FB_MSM_MDSS_KCAL_CTRL
 	---help---
 	  Enable sysfs for rgb/lut control for mdss-mdp display controllers
 	  in the MDSS sub-system.
+
