--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -53,3 +53,12 @@ config LCD_NOTIFY
 config FB_MSM_MDSS_SUB_AREA_TABLE_51
 	bool "MDSS white tuning table"
 	default n
+	---help---
+	  MDSS support for Framebuffer quickdraw
+
+config FB_MSM_MDSS_KCAL_CTRL
+	depends on FB_MSM_MDSS
+	bool "MDSS color control"
+	---help---
+	  Enable sysfs for rgb/lut control for mdss-mdp display controllers
+	  in the MDSS sub-system.
