--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1062,6 +1062,11 @@ config TOUCHSCREEN_GT9XX
 
           If unsure, say N.
 
+config TOUCHSCREEN_SWEEP2WAKE
+        tristate "Sweep2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default n
+
 config TOUCHSCREEN_DOUBLETAP2WAKE
         tristate "DoubleTap2Wake for touchscreens"
         select TOUCHSCREEN_PREVENT_SLEEP
