--- a/arch/arm/configs/togari_defconfig
+++ b/arch/arm/configs/togari_defconfig
@@ -1696,7 +1696,7 @@ CONFIG_TOUCHSCREEN_MAX1187X=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+# CONFIG_TOUCHSCREEN_SWEEP2WAKE is not set
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_INPUT_MISC=y
