--- a/arch/arm/configs/togari_defconfig
+++ b/arch/arm/configs/togari_defconfig
@@ -35,6 +35,9 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_PROC_DEVICETREE=y
 
 #
 # General setup
